优化移动端布局 - 重新设计控制按钮排列

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
             <!-- 游戏控制面板 -->
             <div class="game-controls">
+                <!-- 主要控制按钮（开始/暂停） -->
                 <div class="control-buttons">
                     <button id="start-btn" class="btn btn-primary">开始游戏</button>
                     <button id="pause-btn" class="btn btn-secondary" disabled>暂停</button>
-                    <button id="settings-btn" class="btn btn-secondary">设置</button>
                 </div>
                 
                 <!-- 移动端虚拟方向键 -->
@@ -57,6 +57,13 @@
                         </div>
                         <button class="dir-btn down" id="down-btn">↓</button>
                     </div>
+                </div>
+                
+                <!-- 次要控制按钮（设置/历史记录/游戏说明） -->
+                <div class="secondary-buttons">
+                    <button id="settings-btn" class="btn btn-secondary">设置</button>
+                    <button id="history-btn" class="btn btn-secondary">历史记录</button>
+                    <button id="instructions-btn" class="btn btn-secondary">游戏说明</button>
                 </div>
             </div>
         </main>
