添加桌面端齿轮按钮 - 集成设置、历史记录和游戏说明功能

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                     <span>最高分数: </span>
                     <span id="high-score">0</span>
                 </div>
+                <button id="gear-btn" class="gear-btn" title="设置">⚙️</button>
+                <div class="gear-menu" id="gear-menu">
+                    <button class="gear-menu-item" id="gear-settings">设置</button>
+                    <button class="gear-menu-item" id="gear-history">历史记录</button>
+                    <button class="gear-menu-item" id="gear-instructions">游戏说明</button>
+                </div>
             </div>
         </header>
 
