修复桌面端界面重复按钮问题 - 桌面端只显示齿轮按钮，移动端保持三列按钮

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                     </div>
                 </div>
                 
-                <!-- 次要控制按钮（设置/历史记录/游戏说明） -->
+                <!-- 移动端次要控制按钮（设置/历史记录/游戏说明） -->
                 <div class="secondary-buttons">
-                    <button id="settings-btn" class="btn btn-secondary">设置</button>
-                    <button id="history-btn" class="btn btn-secondary">历史记录</button>
-                    <button id="instructions-btn" class="btn btn-secondary">游戏说明</button>
+                    <button id="mobile-settings-btn" class="btn btn-secondary">设置</button>
+                    <button id="mobile-history-btn" class="btn btn-secondary">历史记录</button>
+                    <button id="mobile-instructions-btn" class="btn btn-secondary">游戏说明</button>
                 </div>
             </div>
         </main>
