移除齿轮按钮 - 将三个次级按钮放到分数区域下方

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
                     <span>最高分数: </span>
                     <span id="high-score">0</span>
                 </div>
-                <button id="gear-btn" class="gear-btn" title="设置">⚙️</button>
-                <div class="gear-menu" id="gear-menu">
-                    <button class="gear-menu-item" id="gear-settings">设置</button>
-                    <button class="gear-menu-item" id="gear-history">历史记录</button>
-                    <button class="gear-menu-item" id="gear-instructions">游戏说明</button>
-                </div>
+            </div>
+            
+            <!-- 桌面端次级按钮 -->
+            <div class="desktop-secondary-buttons">
+                <button id="desktop-settings-btn" class="btn btn-secondary">设置</button>
+                <button id="desktop-history-btn" class="btn btn-secondary">历史记录</button>
+                <button id="desktop-instructions-btn" class="btn btn-secondary">游戏说明</button>
             </div>
         </header>
 
